Add permgentest that replicates adding and extension point and evaluating it several times